--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "mocha": "^6.0.2"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1"
   }
 }
