--- a/API/package.json
+++ b/API/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon --exec babel-node app.js",
-    "test": "nyc --reporter=html --reporter=text --register @babel/register mocha --exit",
+    "test": "nyc --reporter=text --register @babel/register mocha --exit",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "nyc": {
