--- a/API/package.json
+++ b/API/package.json
@@ -40,9 +40,10 @@
     "nyc": "^13.3.0"
   },
   "dependencies": {
+    "bcrypt": "^3.0.5",
+    "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
-    "body-parser": "^1.18.3",
     "debug": "^4.1.1",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
