--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Banka is a light-weight core banking application that powers banking\r operations like account creation, customer deposit and withdrawals.",
   "main": "app.js",
   "scripts": {
+    "start": "babel-node API/app.js",
     "dev": "nodemon --exec babel-node API/app.js",
     "test": "nyc --reporter=lcov --reporter=text --register @babel/register mocha --exit",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
@@ -47,6 +48,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "debug": "^4.1.1",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1"
