--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "nyc": "^13.3.0"
   },
   "dependencies": {
+    "@babel/cli": "^7.4.3",
+    "@babel/node": "^7.2.2",
     "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
