chore(api-feedback):implement the backend feedback from LFA
- restructure tests into seperate files
- replace filter and forEach methods with find
- use better naming for variables
- use express body parsing middleware instead of body-parser
- stop checking accountNumber in request body
- use camelCasing for firstName and lastName fields
- make error messages of user type and isAdmin more descriptive
- sign only the unique details
- wrong email or password input should have error message mentioning both
- add authorization checks to come before validations
- add documentation to accountController
- add documentation to transactionController
- add documentation to userController
- add documentation to the various helper functions
- add documentation to middlewares
- add documentation to the validation middlewares
- format validation errors using objects not strings
- refactor transaction controller to not recieve type from body
- add new line to end of files where missing
- use better variable names

[Finishes #165401163]

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "babel-node API/app.js",
     "dev": "nodemon --exec babel-node API/app.js",
-    "test": "nyc --reporter=lcov --reporter=text --register @babel/register mocha --exit",
+    "test": "nyc --reporter=lcov --reporter=text --register @babel/register mocha test --recursive --exit",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "codeclimate": "codeclimate-test-reporter < ./coverage/lcov.info"
   },
@@ -44,12 +44,11 @@
   },
   "dependencies": {
     "@babel/cli": "^7.4.3",
-    "@babel/node": "^7.2.2",
     "@babel/core": "^7.4.3",
+    "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.3",
     "@babel/register": "^7.4.0",
     "bcrypt": "^3.0.5",
-    "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "debug": "^4.1.1",
