--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,5 +5,14 @@
         "node": true,
         "mocha": true
     },
-    "extends": "airbnb-base"
+    "extends": "airbnb-base",
+    "rules": {
+        "linebreak-style": "off",
+        "max-len": [
+            "error",
+            {
+                "code": 80
+            }
+        ]
+    }
 }
