--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
 language: node_js
 node_js:
   - "stable"
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database banka_test;' -U postgres
 addons:
+    postgresql: "11.2"
     code_climate:
         repo_token: b7e1e3cc59f73a6b9dd60efd8b150e219219657ba10957cedb0b69fdc9b3eb7b
+env:
+  global:
+  - PGPORT=5432
 cache: 
   directories:
     - "node_modules"
