--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "babel-node API/app.js",
-    "dev": "SET NODE_ENV=development && nodemon --exec babel-node API/app.js",
+    "dev": "nodemon --exec babel-node API/app.js",
     "test": "SET NODE_ENV=test && nyc --reporter=lcov --reporter=text --register @babel/register mocha test --recursive --exit",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "codeclimate": "codeclimate-test-reporter < ./coverage/lcov.info"
