--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Banka is a light-weight core banking application that powers banking\r operations like account creation, customer deposit and withdrawals.",
   "main": "app.js",
   "scripts": {
-    "start": "babel-node API/app.js",
-    "dev": "nodemon --exec babel-node API/app.js",
-    "test": "SET NODE_ENV=test && nyc --reporter=lcov --reporter=text --register @babel/register mocha test --recursive --exit",
+    "start": "cross-env NODE_ENV=production babel-node API/app.js",
+    "dev": "cross-env NODE_ENV=development nodemon --exec babel-node API/app.js",
+    "dev:test": "cross-env NODE_ENV=development nyc --reporter=lcov --reporter=text --register @babel/register mocha test --timeout 20000 --recursive --exit",
+    "test": "cross-env NODE_ENV=travis nyc --reporter=lcov --reporter=text --register @babel/register mocha test --timeout 20000 --recursive --exit",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "codeclimate": "codeclimate-test-reporter < ./coverage/lcov.info"
   },
@@ -48,9 +49,11 @@
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.3",
     "@babel/register": "^7.4.0",
-    "bcrypt": "^3.0.5",
+    "bcrypt": "^3.0.6",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
+    "cors": "^2.8.5",
+    "cross-env": "^5.2.0",
     "debug": "^4.1.1",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
